<resources>
    <string name="app_name">Local Bus</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome to the LOCAL BUS APK!!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="artm">ARRIVAL TIME</string>
    <string name="businfo">Give the bus info</string>
    <string name="busname">BUS NAME</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="dt">DEPARTURE TIME</string>
    <string name="busnum">BUS NUMBER</string>
    <string name="save">SAVE</string>
    <string name="time_of_arrival">TIME OF ARRIVAL</string>
    <string name="fullname">FULL NAME</string>
    <string name="age">AGE</string>
    <string name="register">Sign-Up</string>
    <string name="fill_registeration_form">Fill Registeration Form</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="resetpwd">Reset Password</string>
    <string name="emailentry">Enter Your Email</string>
    <string name="dots">.............................................................................................................</string>
    <string name="content_fpwda">Please enter your email address below .\n We will send the email with instructions on how to reset your password.</string>
    <string name="todo">TODO</string>
    <string name="userinfo">User Account Info</string>

</resources>